@@ -13,6 +13,7 @@ Bugfixes
 --------
 - view: fail config if bad subnet is specified (!1112)
 - doh2: fix memory leak (!1117)
+- policy.ANSWER: minor fixes, mainly around NODATA answers (!1129)
 
 Incompatible changes
 --------------------
